--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -30,11 +30,26 @@
 
             <TextView
                 android:text="@{controller.songName}"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:textColor="@android:color/white"
                 tools:text="Song name" />
+            <ImageView
+                android:id="@+id/im_download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:src="@drawable/ic_download"
+                app:tint="@android:color/white" />
+            <ImageView
+                android:id="@+id/im_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:src="@drawable/ic_favorited"
+                app:tint="@android:color/white" />
         </LinearLayout>
 
         <LinearLayout
@@ -50,7 +65,7 @@
                 app:cardCornerRadius="1000dp">
 
                 <ImageView
-                    app:image="@{controller.songImage}"
+                    app:thumb="@{controller.song}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@mipmap/ic_launcher" />
