--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -6,9 +6,24 @@
             name="adapter"
             type="com.doan.mp3music.ui.base.BaseBindingAdapter&lt;com.doan.mp3music.models.Song>" />
     </data>
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:adapter="@{adapter}"/>
+        android:orientation="vertical">
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_shuffle"
+            android:visibility="gone"
+            android:src="@drawable/ic_shuffle"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:background="@color/colorPrimary"
+            android:tint="@android:color/white"
+            android:padding="6dp"
+            android:layout_height="wrap_content"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:adapter="@{adapter}"/>
+    </LinearLayout>
 </layout>
