--- a/app/src/main/res/layout/item_song_favorite.xml
+++ b/app/src/main/res/layout/item_song_favorite.xml
@@ -2,14 +2,13 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="android.view.View"/>
-        <variable
-            name="item"
-            type="com.doan.mp3music.models.Song" />
-
         <variable
             name="listener"
-            type="com.doan.mp3music.ui.screen.MediaListener&lt;com.doan.mp3music.models.Song>" />
+            type="com.doan.mp3music.ui.screen.MediaListener&lt;com.doan.mp3music.models.SongOnline>" />
+        <variable
+            name="item"
+            type="com.doan.mp3music.models.SongOnline" />
+
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,7 +16,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="3dp"
+        android:paddingTop="5dp"
         android:gravity="center_vertical"
         android:paddingBottom="2dp"
         android:onClick="@{v -> listener.onItemMediaClicked(item)}"
@@ -29,10 +28,11 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                thumb="@{item}"/>
+                app:thumb="@{item}"/>
         </androidx.cardview.widget.CardView>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="16dp">
@@ -45,11 +45,11 @@
                 android:text="@{item.artist}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-            <TextView
-                app:duration="@{item.duration}"
-                android:visibility="@{item.duration > 0 ? View.VISIBLE : View.GONE}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
         </LinearLayout>
+        <ImageView
+            android:onClick="@{v -> listener.onUnFavoriteClicked(item)}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_favorited"/>
     </LinearLayout>
 </layout>
