--- a/app/src/main/res/layout/item_song_online.xml
+++ b/app/src/main/res/layout/item_song_online.xml
@@ -2,7 +2,9 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="listener"
+            type="com.doan.mp3music.ui.screen.MediaListener&lt;com.doan.mp3music.models.SongOnline>" />
         <variable
             name="item"
             type="com.doan.mp3music.models.SongOnline" />
@@ -17,6 +19,7 @@
         android:paddingTop="5dp"
         android:gravity="center_vertical"
         android:paddingBottom="2dp"
+        android:onClick="@{v -> listener.onItemMediaClicked(item)}"
         android:orientation="horizontal">
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -25,7 +28,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                app:image="@{item.image}"/>
+                app:thumb="@{item}"/>
         </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
