--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -134,16 +134,29 @@
                     app:tint="@android:color/white" />
             </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:id="@+id/tv_list"
-            android:text="Danh sách phát"
-            android:drawablePadding="10dp"
-            android:textColor="@android:color/white"
-            android:drawableRight="@drawable/ic_song"
-            android:drawableTint="@android:color/white"
-            android:layout_width="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_gravity="right"
-            android:layout_height="wrap_content"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/im_loop"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/ic_loop"
+                android:layout_width="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_alignParentRight="true"
+                android:id="@+id/tv_list"
+                android:layout_centerVertical="true"
+                android:text="Danh sách phát"
+                android:drawablePadding="10dp"
+                android:textColor="@android:color/white"
+                android:drawableRight="@drawable/ic_song"
+                android:drawableTint="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_gravity="right"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
     </LinearLayout>
 </layout>
