--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,8 @@
             android:layout_height="match_parent"/>
         <com.doan.mp3music.ui.views.ControllerView
             android:id="@+id/controller_view"
-            android:layout_above="@id/bottom_nav"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_nav"
-            app:menu="@menu/bottom_nav"
-            android:background="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </layout>
