--- a/app/src/main/res/layout/fragment_artist.xml
+++ b/app/src/main/res/layout/fragment_artist.xml
@@ -4,22 +4,12 @@
     <data>
         <variable
             name="adapter"
-            type="com.doan.mp3music.ui.base.BaseBindingAdapter&lt;com.doan.mp3music.models.Song>" />
+            type="com.doan.mp3music.ui.base.BaseBindingAdapter&lt;com.doan.mp3music.models.Artist>" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/btn_shuffle"
-            android:visibility="gone"
-            android:src="@drawable/ic_shuffle"
-            android:layout_width="match_parent"
-            android:layout_margin="16dp"
-            android:background="@color/colorPrimary"
-            android:tint="@android:color/white"
-            android:padding="6dp"
-            android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
