--- a/app/src/main/res/layout/item_song_favorite.xml
+++ b/app/src/main/res/layout/item_song_favorite.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:text="@{item.artist}"
+                android:text="@{item.artistName}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
