--- a/app/src/main/res/layout/item_song_top.xml
+++ b/app/src/main/res/layout/item_song_top.xml
@@ -2,13 +2,14 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable
-            name="listener"
-            type="com.doan.mp3music.ui.screen.MediaListener&lt;com.doan.mp3music.models.SongOnline>" />
+        <import type="android.view.View"/>
         <variable
             name="item"
             type="com.doan.mp3music.models.SongOnline" />
 
+        <variable
+            name="listener"
+            type="com.doan.mp3music.ui.screen.MediaListener&lt;com.doan.mp3music.models.SongOnline>" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,7 +17,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="5dp"
+        android:paddingTop="3dp"
         android:gravity="center_vertical"
         android:paddingBottom="2dp"
         android:onClick="@{v -> listener.onItemMediaClicked(item)}"
@@ -28,7 +29,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                app:thumb="@{item}"/>
+                thumb="@{item}"/>
         </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,6 +44,13 @@
             <TextView
                 android:text="@{item.artistName}"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="@{item.views + ``}"
+                android:drawableLeft="@drawable/ic_eye"
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:drawablePadding="4dp"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
