--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,6 +5,7 @@
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_search"
         android:title="Search"
+        android:visible="false"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.widget.SearchView" />
 
